--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,5 @@
 $background-grey: #f3f3f3;
+$button-grey: #5e5e5e;
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -9,4 +10,31 @@ body {
 
 button {
   height: 2.5rem;
+  border: none;
+  font-size: 1.3rem;
+  border-bottom: 4px solid #ccc;
+  margin-left: .5rem;
+  cursor: pointer;
+  color: $button-grey;
+}
+
+.container {
+  font-size: 1.3rem;
+  color: $background-grey;
+  background: red
+}
+
+.is-completed {
+  text-decoration: line-through;
+  color: $button-grey;
+}
+
+.tdl-input {
+  padding: .5rem;
+  font-size: 1.3rem;
+  margin: 1rem 0;
+}
+
+.tdl-task {
+  padding: .5rem;
 }
